@@ -1,3 +1,8 @@
+2008-11-18  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Projection/ProjFourWrapper.cs: add TryParseEpsg
+	* Web/TileProvider.cs: support tms/openLayers
+
 2008-11-12  Scott Ellington <scott.ellington@gmail.com> 
 
 	* Data/WellKnownText, Data/WellKnownText/SimpleFeatureAccess.cs,
